unpackaged/main/default/objects/Engagement_Waitlist__c/Engagement_Waitlist__c.object-meta.xml
<CustomObject>
    <label>Engagement Waitlist</label>
    <nameField>
        <label>Engagement Waitlist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Waitlists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>