unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Attendee_Email__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Email__c</fullName>
    <formula>Engagement_Attendee__r.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Email</label>
    <type>Text</type>
</CustomField>