unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Attendee_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Record_Type__c</fullName>
    <formula>Engagement_Attendee__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Record Type</label>
    <type>Text</type>
</CustomField>