unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Confirmed_in_Class__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_in_Class__c</fullName>
    <formula>IF(ISPICKVAL( Waitlist_Status__c ,&quot;Confirmed&quot;), LastModifiedDate, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmed in Class</label>
    <type>Date</type>
</CustomField>