unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Date_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Date_Contacted__c</fullName>
    <label>Date Contacted</label>
    <type>Date</type>
</CustomField>