unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>Engagement Waitlists</relationshipLabel>
    <relationshipName>Engagement_Waitlists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>