unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>