unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Engagement Waitlists</relationshipLabel>
    <relationshipName>Engagement_Waitlists</relationshipName>
    <type>Lookup</type>
</CustomField>