unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Sponser__c.field-meta.xml
<CustomField>
    <fullName>Sponser__c</fullName>
    <formula>Engagement_Attendee__r.Sponsor__r.Contact_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponser</label>
    <type>Text</type>
</CustomField>