unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Sponser_Email__c.field-meta.xml
<CustomField>
    <fullName>Sponser_Email__c</fullName>
    <formula>Engagement_Attendee__r.Sponsor_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sponser Email</label>
    <type>Text</type>
</CustomField>