unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Engagement Waitlists</relationshipLabel>
    <relationshipName>Engagement_Waitlists</relationshipName>
    <type>Lookup</type>
</CustomField>