unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Total_days_on_waitlist__c.field-meta.xml
<CustomField>
    <fullName>Total_days_on_waitlist__c</fullName>
    <formula>Confirmed_in_Class__c - Waitlist_Created__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total days on waitlist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>