unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Waitlist_Created__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Waitlist Created</label>
    <type>Date</type>
</CustomField>