unpackaged/main/default/objects/Engagement_Waitlist__c/fields/Waitlist_Status__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Status__c</fullName>
    <label>Waitlist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Pending Confirmation</fullName>
            </value>
            <value>
                <fullName>Pending Sale</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>