unpackaged/main/default/objects/Engagement_Waitlist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Waitlist_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Waitlist_Status__c</field>
        <operation>equals</operation>
        <value>Pending Confirmation</value>
    </filters>
    <label>All</label>
</ListView>